--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
-  "license": "0BSD",
+  "license": "MIT",
   "dependencies": {
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-sitemap": "^2.9.0",
+    "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-source-filesystem": "^2.8.1",
+    "gatsby-source-strapi": "^0.0.12",
     "gatsby-transformer-sharp": "^2.9.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^4.1.0",
+    "react-markdown": "^5.0.3"
   }
 }
