Added Jobs, Projects, and Contact Sections to page, linked Strapi CMS to Cloudinary, and created first project build

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "cleandev": "gatsby clean && gatsby develop"
   },
   "license": "MIT",
   "dependencies": {
